# team01

./: CMakeLists.txt  README.md  REPORT-2.md  REPORT.md  Report3.md  Untitled.ipynb  runmassspring.sh
demos/: plot_rc.py  plotmassspring.py  rc_.txt  rc_CN.txt  rc_explicit.txt  rc_implicit.txt  rc_improved.txt  test_IRK.cpp  test_autodiff.cpp  test_ode.cpp  test_plot_irk.py  test_rc.cpp
demos/.ipynb_checkpoints/: test_IRK-checkpoint.cpp  test_ode-checkpoint.cpp  test_pendulum_autodiff-checkpoint.cpp  test_rc-checkpoint.cpp
demos/irk-100-steps/: gauss2.txt  gauss3.txt  plot_irk2.py  plot_irk3.py  plot_radau.py  radau.txt
demos/irk-20-steps/: gauss2.txt  gauss3.txt  plot_irk3.py  radau.txt
demos/irk_results/: data.txt  plot.py
documentation/: ExplicitEuler.ipynb  ExplicitRK.ipynb  ImplicitRK.ipynb  home.ipynb
documentation/.ipynb_checkpoints/: CN-checkpoint.ipynb  ImplicitEuler-checkpoint.ipynb  ImprovedEuler-checkpoint.ipynb  Testing-checkpoint.ipynb  TestingOnMassSpring-checkpoint.ipynb  TestingOnRCSystem-checkpoint.ipynb  home-checkpoint.ipynb
mechsystem/: mass_spring.cpp  mass_spring.hpp
src/: autodiff.hpp  implicitRK.hpp  rccircuit.hpp  timestepper.hpp
src/.ipynb_checkpoints/: massspring-checkpoint.cpp  timestepper-checkpoint.hpp
